Realizei alterações no html

--- a/index.html
+++ b/index.html
@@ -89,5 +89,11 @@
             </section>
         </div>
     </main>
+    <footer>
+        <h3>Projeto Por uma Nova Globalização</h3>
+        <p>Disciplina: Geografia II</p>
+        <p>Orientador: Carlos Eugênio de Faria</p>
+        <p>Alunos: Lucas Dias, Larícia, Jesiane, Maria Vitória</p>
+    </footer>
 </body>
 </html>
